Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Connect 4/c4stylesheet.css
+++ b/Projects/Connect 4/c4stylesheet.css
@@ -3,4 +3,19 @@
 	Aaron C Salcido, October 10th, 2014 */
 	
 
+body{
+	
+}
 
+.header{
+	position:fixed;
+	width:100%;
+}
+.navbar{
+	
+}
+.navbar  li{
+	display:inline;
+}
+.navbar a{
+}
