--- a/Projects/Blackjack-Business Websites/stylesheet.css
+++ b/Projects/Blackjack-Business Websites/stylesheet.css
@@ -1,21 +1,60 @@
 @charset "utf-8";
 /* CSS Document */
+
+a{
+	text-decoration:none;
+}
 aside div{
-	position:absolute;
-	display:block;
-	allign:left;
+
+
 	float:left;
 	width:100px;
+	padding-left:8px;
 	border:2px solid black;
 }
-
-#indexmain{
+#headerlogin{
+	display:inline;	
+}
+.games{
+	width:auto;
 	allign:center;	
-	display:block;
-	float:right;
+}
+#games{
+	allign: center;
+	border: 2px solid #7ACCA3;
+	width: 250px;
+	height: 250px;
+	position: relative;
+	text-align: center;
+	border-radius: 20px;
+	font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", sans-serif;
+	color: #006DF0;
+	font-style: normal;
+	text-decoration: none;
+	background-image: url(;
+}
+#games a{
+	text-allign: center;
+	margin: auto;
+	vertical-align: text-bottom;
 }
 
 header li{
 	display:inline;	
 	padding:5px;
+	text-decoration:none;
+	font-family:Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", sans-serif;
 }
+
+.nav{
+	display:inline;	
+	padding:5px;
+	text-decoration:none;
+	font-family:Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", sans-serif;
+}
+button{
+	display:inline;	
+}
+#indexmain{
+	margin-left:120px;
+}	
