--- a/Projects/Blackjack-Business Websites/stylesheet.css
+++ b/Projects/Blackjack-Business Websites/stylesheet.css
@@ -1,12 +1,20 @@
 @charset "utf-8";
 /* CSS Document */
 
+body{
+	background-image: -webkit-linear-gradient(270deg,rgba(171,149,149,1.00) 8.29%,rgba(255,255,255,1.00) 23.32%,rgba(217,216,216,1.00) 44.56%,rgba(0,0,0,1.00) 96.89%,rgba(0,0,0,1.00) 99.48%);
+	background-image: -moz-linear-gradient(270deg,rgba(171,149,149,1.00) 8.29%,rgba(255,255,255,1.00) 23.32%,rgba(217,216,216,1.00) 44.56%,rgba(0,0,0,1.00) 96.89%,rgba(0,0,0,1.00) 99.48%);
+	background-image: -o-linear-gradient(270deg,rgba(171,149,149,1.00) 8.29%,rgba(255,255,255,1.00) 23.32%,rgba(217,216,216,1.00) 44.56%,rgba(0,0,0,1.00) 96.89%,rgba(0,0,0,1.00) 99.48%);
+	background-image: linear-gradient(180deg,rgba(171,149,149,1.00) 8.29%,rgba(255,255,255,1.00) 23.32%,rgba(217,216,216,1.00) 44.56%,rgba(0,0,0,1.00) 96.89%,rgba(0,0,0,1.00) 99.48%);
+	background-attachment:fixed;
+}
 a{
 	text-decoration:none;
 }
 aside div{
 
-
+	font-family:Arial, Gotham, "Helvetica Neue", Helvetica, sans-serif;
+	font-size:10px;
 	float:left;
 	width:100px;
 	padding-left:8px;
