--- a/Projects/Blackjack-Business Websites/stylesheet.css
+++ b/Projects/Blackjack-Business Websites/stylesheet.css
@@ -2,21 +2,30 @@
 /* CSS Document */
 
 body{
-	background-image: -webkit-linear-gradient(270deg,rgba(171,149,149,1.00) 8.29%,rgba(255,255,255,1.00) 23.32%,rgba(217,216,216,1.00) 44.56%,rgba(0,0,0,1.00) 96.89%,rgba(0,0,0,1.00) 99.48%);
-	background-image: -moz-linear-gradient(270deg,rgba(171,149,149,1.00) 8.29%,rgba(255,255,255,1.00) 23.32%,rgba(217,216,216,1.00) 44.56%,rgba(0,0,0,1.00) 96.89%,rgba(0,0,0,1.00) 99.48%);
-	background-image: -o-linear-gradient(270deg,rgba(171,149,149,1.00) 8.29%,rgba(255,255,255,1.00) 23.32%,rgba(217,216,216,1.00) 44.56%,rgba(0,0,0,1.00) 96.89%,rgba(0,0,0,1.00) 99.48%);
-	background-image: linear-gradient(180deg,rgba(171,149,149,1.00) 8.29%,rgba(255,255,255,1.00) 23.32%,rgba(217,216,216,1.00) 44.56%,rgba(0,0,0,1.00) 96.89%,rgba(0,0,0,1.00) 99.48%);
-	background-attachment:fixed;
+	background-image: -webkit-linear-gradient(270deg,rgba(127,119,119,1.00) 8.29%,rgba(255,255,255,1.00) 21.77%,rgba(217,216,216,1.00) 34.20%,rgba(0,0,0,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
+	background-image: -moz-linear-gradient(270deg,rgba(127,119,119,1.00) 8.29%,rgba(255,255,255,1.00) 21.77%,rgba(217,216,216,1.00) 34.20%,rgba(0,0,0,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
+	background-image: -o-linear-gradient(270deg,rgba(127,119,119,1.00) 8.29%,rgba(255,255,255,1.00) 21.77%,rgba(217,216,216,1.00) 34.20%,rgba(0,0,0,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
+	background-image: linear-gradient(180deg,rgba(127,119,119,1.00) 8.29%,rgba(255,255,255,1.00) 21.77%,rgba(217,216,216,1.00) 34.20%,rgba(0,0,0,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
+	background-attachment: fixed;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding-top: 0px;
+	padding-right: 0px;
+	padding-bottom: 0px;
+	padding-left: 0px;
+	width: 95%;
+	min-width: 0px;
+	min-height: 0px;
 }
 a{
 	text-decoration:none;
 }
 aside div{
-
+	margin-top:10px;
 	font-family:Arial, Gotham, "Helvetica Neue", Helvetica, sans-serif;
 	font-size:10px;
 	float:left;
-	width:100px;
+	width:120px;
 	padding-left:8px;
 	border:2px solid black;
 }
@@ -29,6 +38,7 @@ aside div{
 	text-align:center;	
 }
 #games{
+	margin-top:10px;
 	margin-left:auto;
 	margin-right:auto;
 	text-align: center;
@@ -56,7 +66,16 @@ aside div{
 	vertical-align: text-bottom;
 	
 }
-
+header{
+	background-image: -webkit-linear-gradient(270deg,rgba(255,255,255,1.00) 68.91%,rgba(191,180,180,1.00) 96.89%,rgba(88,88,88,1.00) 100%,rgba(0,0,0,1.00) 100%);
+	background-image: -moz-linear-gradient(270deg,rgba(255,255,255,1.00) 68.91%,rgba(191,180,180,1.00) 96.89%,rgba(88,88,88,1.00) 100%,rgba(0,0,0,1.00) 100%);
+	background-image: -o-linear-gradient(270deg,rgba(255,255,255,1.00) 68.91%,rgba(191,180,180,1.00) 96.89%,rgba(88,88,88,1.00) 100%,rgba(0,0,0,1.00) 100%);
+	background-image: linear-gradient(180deg,rgba(255,255,255,1.00) 68.91%,rgba(191,180,180,1.00) 96.89%,rgba(88,88,88,1.00) 100%,rgba(0,0,0,1.00) 100%);
+	text-align: center;
+	width: 100%;
+	border-radius:20px;
+		
+}
 header ul li{
 	display:inline;	
 	padding:5px;
@@ -77,7 +96,7 @@ button{
 	display:inline;	
 }
 #indexmain{
-	margin-left:120px;
+	margin-left:135px;
 }	
 #aboutdiv{
 	margin-left:auto;
@@ -100,4 +119,8 @@ button{
 }
 #aboutdiv p{
 	color:white;
+}
+.formdiv{
+	margin-top: 20px;
+	padding-top: 8px;
 }
