Set all webpages to look the same, made the Register and Login pages working Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites/stylesheet.css
+++ b/Projects/Blackjack-Business Websites/stylesheet.css
@@ -123,4 +123,17 @@ button{
 .formdiv{
 	margin-top: 20px;
 	padding-top: 8px;
+	margin-left:220px;
+}
+.regesterdiv{
+	position:relative;
+	margin:130px;
+	margin-left:150px;
+}
+.registerimg{
+	size:portrait;
+	width:650px;
+	height:300px;
+	position:static;
+	
 }
