--- a/Projects/Blackjack-Business Websites V2/stylesheet.css
+++ b/Projects/Blackjack-Business Websites V2/stylesheet.css
@@ -2,10 +2,10 @@
 /* CSS Document */
 
 body{
-	background-image: -webkit-linear-gradient(270deg,rgba(127,119,119,1.00) 8.29%,rgba(255,255,255,1.00) 21.77%,rgba(217,216,216,1.00) 34.20%,rgba(0,0,0,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
-	background-image: -moz-linear-gradient(270deg,rgba(127,119,119,1.00) 8.29%,rgba(255,255,255,1.00) 21.77%,rgba(217,216,216,1.00) 34.20%,rgba(0,0,0,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
-	background-image: -o-linear-gradient(270deg,rgba(127,119,119,1.00) 8.29%,rgba(255,255,255,1.00) 21.77%,rgba(217,216,216,1.00) 34.20%,rgba(0,0,0,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
-	background-image: linear-gradient(180deg,rgba(127,119,119,1.00) 8.29%,rgba(255,255,255,1.00) 21.77%,rgba(217,216,216,1.00) 34.20%,rgba(0,0,0,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
+	background-image: -webkit-linear-gradient(253deg,rgba(127,119,119,1.00) 4.66%,rgba(255,255,255,1.00) 27.47%,rgba(215,215,215,1.00) 53.89%,rgba(144,144,144,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
+	background-image: -moz-linear-gradient(253deg,rgba(127,119,119,1.00) 4.66%,rgba(255,255,255,1.00) 27.47%,rgba(215,215,215,1.00) 53.89%,rgba(144,144,144,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
+	background-image: -o-linear-gradient(253deg,rgba(127,119,119,1.00) 4.66%,rgba(255,255,255,1.00) 27.47%,rgba(215,215,215,1.00) 53.89%,rgba(144,144,144,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
+	background-image: linear-gradient(197deg,rgba(127,119,119,1.00) 4.66%,rgba(255,255,255,1.00) 27.47%,rgba(215,215,215,1.00) 53.89%,rgba(144,144,144,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
 	background-attachment: fixed;
 	margin-top: 0px;
 	margin-bottom: 0px;
@@ -77,10 +77,11 @@ header{
 		
 }
 header ul li{
-	display:inline;	
-	padding:5px;
-	text-decoration:none;
-	font-family:Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", sans-serif;
+	display: inline;
+	padding: 5px;
+	text-decoration: none;
+	font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", sans-serif;
+	min-width: 0px;
 }
 
 .nav{
