Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V2/stylesheet.css
+++ b/Projects/Blackjack-Business Websites V2/stylesheet.css
@@ -16,6 +16,7 @@ body{
 	width: 95%;
 	min-width: 0px;
 	min-height: 0px;
+	opacity: 1;
 }
 a{
 	text-decoration:none;
@@ -148,4 +149,16 @@ button{
 }
 #registerSubmit{
 		
+}
+.loginImg {
+	margin-left: auto;
+	margin-top: auto;
+	margin-right: auto;
+	margin-bottom: auto;
+	-webkit-box-shadow: -10px 3px 52px 2px #0024D0;
+	box-shadow: -10px 3px 52px 2px #0024D0;
+	width: 683px;
+	height: 314px;
+	display: block;
+	opacity: 0.62;
 }
