--- a/Projects/Blackjack-Business Websites V3/blackjackstylesheet.css
+++ b/Projects/Blackjack-Business Websites V3/blackjackstylesheet.css
@@ -1,25 +1,10 @@
 @charset "utf-8";
 /* CSS Document */
+*{
+	color:white;	
+}
 #blackbjackbody{
 	background-color:black;	
-}
-
-body{
-	background-image: -webkit-linear-gradient(253deg,rgba(127,119,119,1.00) 4.66%,rgba(255,255,255,1.00) 27.47%,rgba(215,215,215,1.00) 53.89%,rgba(144,144,144,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
-	background-image: -moz-linear-gradient(253deg,rgba(127,119,119,1.00) 4.66%,rgba(255,255,255,1.00) 27.47%,rgba(215,215,215,1.00) 53.89%,rgba(144,144,144,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
-	background-image: -o-linear-gradient(253deg,rgba(127,119,119,1.00) 4.66%,rgba(255,255,255,1.00) 27.47%,rgba(215,215,215,1.00) 53.89%,rgba(144,144,144,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
-	background-image: linear-gradient(197deg,rgba(127,119,119,1.00) 4.66%,rgba(255,255,255,1.00) 27.47%,rgba(215,215,215,1.00) 53.89%,rgba(144,144,144,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
-	background-attachment: fixed;
-	margin-top: 0px;
-	margin-bottom: 0px;
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 0px;
-	padding-left: 0px;
-	width: 95%;
-	min-width: 0px;
-	min-height: 0px;
-	opacity: 1;
 }
 a{
 	text-decoration:none;
