--- a/Projects/Blackjack-Business Websites V3/stylesheet.css
+++ b/Projects/Blackjack-Business Websites V3/stylesheet.css
@@ -166,14 +166,13 @@ button{
 	opacity: 0.62;
 }
 table{
-	border: solid 2px black;	
-	width:350px;
-	border-collapse: collapse; 
+	border: solid 2px black;
+	width: 553px;
+	border-collapse: separate;
+	height: 602px;
+	border-spacing: 17px 9px;
+	margin-top: 25px;
+	margin-left: auto;
+	margin-right: auto;
 	
-}
-tr{
-	border: solid 1px black;	
-}
-#BlackJackBody {
-	background-color: #000000;
 }
