--- a/Projects/Blackjack-Business Websites V3/stylesheet.css
+++ b/Projects/Blackjack-Business Websites V3/stylesheet.css
@@ -168,11 +168,28 @@ button{
 table{
 	border: solid 2px black;
 	width: 553px;
-	border-collapse: separate;
 	height: 602px;
 	border-spacing: 17px 9px;
 	margin-top: 25px;
 	margin-left: auto;
 	margin-right: auto;
-	
+	border-collapse: collapse;	
+}
+thead{
+	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
+	font-size: 26px;
+	margin-top: auto;
+	margin-right: auto;
+	margin-bottom: auto;
+	margin-left: auto;
+	padding-top: auto;
+	padding-right: auto;
+	padding-bottom: auto;
+	padding-left: auto;	
+}
+tr{
+	border:solid 2px black;	
+}
+td{
+	border:solid 2px black;	
 }
