FIXED HIDING LOGIN BUTTONS!!! Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V3/stylesheet.css
+++ b/Projects/Blackjack-Business Websites V3/stylesheet.css
@@ -193,3 +193,10 @@ tr{
 td{
 	border:solid 2px black;	
 }
+#admin{
+	opacity:0.3;
+	/*align:center;*/
+	margin-top:25px;
+	margin-left:auto;
+	margin-right:auto;
+}
