--- a/Projects/Blackjack-Business Websites V3/stylesheet.css
+++ b/Projects/Blackjack-Business Websites V3/stylesheet.css
@@ -77,7 +77,9 @@ header{
 	background-image: linear-gradient(180deg,rgba(255,255,255,1.00) 68.91%,rgba(191,180,180,1.00) 96.89%,rgba(88,88,88,1.00) 100%,rgba(0,0,0,1.00) 100%);
 	text-align: center;
 	width: 100%;
-	border-radius:20px;
+	border-radius: 20px;
+	-webkit-box-shadow: 2px 2px 26px -3px #000000;
+	box-shadow: 2px 2px 26px -3px #000000;
 		
 }
 header ul li{
@@ -131,9 +133,12 @@ button{
 	margin-left: 220px;
 }
 .regesterdiv{
-	display: table;
+	display: block;
 	position: center;
 	margin: auto;
+	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
+	font-style: italic;
+	font-size: large;
 }
 .registerimg{
 	size:portrait;
@@ -143,6 +148,9 @@ button{
 	
 }
 .regesterdiv #loginform input {
+	display: table;
+	-webkit-box-shadow: inset 2px 84px 31px -86px #451415;
+	box-shadow: inset 2px 84px 31px -86px #451415;
 }
 #ln{
 	display:none;
@@ -151,6 +159,8 @@ button{
 	display:inline;
 }
 #registerSubmit{
+	-webkit-box-shadow: 73px 50px 30px 50px #010101;
+	box-shadow: 73px 50px 30px 50px #010101;
 		
 }
 .loginImg {
@@ -199,4 +209,31 @@ td{
 	margin-top:25px;
 	margin-left:auto;
 	margin-right:auto;
+}#registerComplete {
+	background-color: #E0D2D3;
+	background-image: -webkit-linear-gradient(270deg,rgba(103,125,255,1.00) 0%,rgba(78,80,96,1.00) 58.03%,rgba(0,0,0,1.00) 100%);
+	background-image: -moz-linear-gradient(270deg,rgba(103,125,255,1.00) 0%,rgba(78,80,96,1.00) 58.03%,rgba(0,0,0,1.00) 100%);
+	background-image: -o-linear-gradient(270deg,rgba(103,125,255,1.00) 0%,rgba(78,80,96,1.00) 58.03%,rgba(0,0,0,1.00) 100%);
+	background-image: linear-gradient(180deg,rgba(103,125,255,1.00) 0%,rgba(78,80,96,1.00) 58.03%,rgba(0,0,0,1.00) 100%);
+	margin-top: -55px;
+	margin-right: -55px;
+	margin-bottom: -55px;
+	margin-left: -55px;
+	padding-top: 43px;
+	padding-right: 5px;
+	padding-bottom: 5px;
+	padding-left: 5px;
+}
+.regesterdiv #loginform .regesterdiv {
+	display: block;
+	margin-top: auto;
+	margin-right: auto;
+	margin-bottom: auto;
+	margin-left: auto;
+}
+#Register {
+	background-image: -webkit-linear-gradient(270deg,rgba(235,228,228,1.00) 3.11%,rgba(213,213,213,1.00) 22.80%,rgba(4,39,135,1.00) 100%);
+	background-image: -moz-linear-gradient(270deg,rgba(235,228,228,1.00) 3.11%,rgba(213,213,213,1.00) 22.80%,rgba(4,39,135,1.00) 100%);
+	background-image: -o-linear-gradient(270deg,rgba(235,228,228,1.00) 3.11%,rgba(213,213,213,1.00) 22.80%,rgba(4,39,135,1.00) 100%);
+	background-image: linear-gradient(180deg,rgba(235,228,228,1.00) 3.11%,rgba(213,213,213,1.00) 22.80%,rgba(4,39,135,1.00) 100%);
 }
