--- a/Projects/Blackjack-Business Websites V3/stylesheet.css
+++ b/Projects/Blackjack-Business Websites V3/stylesheet.css
@@ -89,7 +89,9 @@ header ul li{
 	font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", sans-serif;
 	min-width: 0px;
 }
-
+header img{
+	
+}
 .nav{
 	text-align:center;
 	margin-left: auto;
@@ -236,4 +238,11 @@ td{
 	background-image: -moz-linear-gradient(270deg,rgba(235,228,228,1.00) 3.11%,rgba(213,213,213,1.00) 22.80%,rgba(4,39,135,1.00) 100%);
 	background-image: -o-linear-gradient(270deg,rgba(235,228,228,1.00) 3.11%,rgba(213,213,213,1.00) 22.80%,rgba(4,39,135,1.00) 100%);
 	background-image: linear-gradient(180deg,rgba(235,228,228,1.00) 3.11%,rgba(213,213,213,1.00) 22.80%,rgba(4,39,135,1.00) 100%);
+}
+#Register .registerimg {
+	-webkit-box-shadow: 0 0px 0;
+	box-shadow: 0 0px 0;
+}
+#Register header img {
+	width: 37%;
 }
