--- a/Projects/Blackjack-Business Websites V3/stylesheet.css
+++ b/Projects/Blackjack-Business Websites V3/stylesheet.css
@@ -5,10 +5,10 @@
 }
 
 body{
-	background-image: -webkit-linear-gradient(253deg,rgba(127,119,119,1.00) 4.66%,rgba(255,255,255,1.00) 27.47%,rgba(215,215,215,1.00) 53.89%,rgba(144,144,144,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
-	background-image: -moz-linear-gradient(253deg,rgba(127,119,119,1.00) 4.66%,rgba(255,255,255,1.00) 27.47%,rgba(215,215,215,1.00) 53.89%,rgba(144,144,144,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
-	background-image: -o-linear-gradient(253deg,rgba(127,119,119,1.00) 4.66%,rgba(255,255,255,1.00) 27.47%,rgba(215,215,215,1.00) 53.89%,rgba(144,144,144,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
-	background-image: linear-gradient(197deg,rgba(127,119,119,1.00) 4.66%,rgba(255,255,255,1.00) 27.47%,rgba(215,215,215,1.00) 53.89%,rgba(144,144,144,1.00) 84.45%,rgba(0,0,0,1.00) 99.48%);
+	background-image: -webkit-linear-gradient(253deg,rgba(58,54,54,1.00) 4.66%,rgba(189,177,177,1.00) 25.40%,rgba(225,222,222,1.00) 37.31%,rgba(215,215,215,1.00) 53.89%,rgba(180,183,195,1.00) 68.39%,rgba(89,110,187,1.00) 84.97%,rgba(6,41,251,1.00) 99.48%);
+	background-image: -moz-linear-gradient(253deg,rgba(58,54,54,1.00) 4.66%,rgba(189,177,177,1.00) 25.40%,rgba(225,222,222,1.00) 37.31%,rgba(215,215,215,1.00) 53.89%,rgba(180,183,195,1.00) 68.39%,rgba(89,110,187,1.00) 84.97%,rgba(6,41,251,1.00) 99.48%);
+	background-image: -o-linear-gradient(253deg,rgba(58,54,54,1.00) 4.66%,rgba(189,177,177,1.00) 25.40%,rgba(225,222,222,1.00) 37.31%,rgba(215,215,215,1.00) 53.89%,rgba(180,183,195,1.00) 68.39%,rgba(89,110,187,1.00) 84.97%,rgba(6,41,251,1.00) 99.48%);
+	background-image: linear-gradient(197deg,rgba(58,54,54,1.00) 4.66%,rgba(189,177,177,1.00) 25.40%,rgba(225,222,222,1.00) 37.31%,rgba(215,215,215,1.00) 53.89%,rgba(180,183,195,1.00) 68.39%,rgba(89,110,187,1.00) 84.97%,rgba(6,41,251,1.00) 99.48%);
 	background-attachment: fixed;
 	margin-top: 0px;
 	margin-bottom: 0px;
@@ -90,7 +90,7 @@ header ul li{
 	min-width: 0px;
 }
 header img{
-	
+	width: 37%;	
 }
 .nav{
 	text-align:center;
@@ -244,5 +244,5 @@ td{
 	box-shadow: 0 0px 0;
 }
 #Register header img {
-	width: 37%;
+	width: 0%;
 }
