Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Blackjack-Business Websites V3/stylesheet.css
+++ b/Projects/Blackjack-Business Websites V3/stylesheet.css
@@ -246,6 +246,10 @@ td{
 #Register header img {
 	width: 0%;
 }
+#RegisterCompleteDisplay{
+	text-align:center;
+	
+}
 #gameimg{
 	width:250px;
 	height:250px;
