--- a/Projects/Project V 6/stylesheets/blackjackstylesheet.css
+++ b/Projects/Project V 6/stylesheets/blackjackstylesheet.css
@@ -9,7 +9,8 @@
 	background-color:black;	
 }
 a{
-	text-decoration:none;
+	text-decoration: none;
+	color: #110082;
 }
 aside div{
 	margin-top:10px;
@@ -185,4 +186,13 @@ tr{
 #hold{
 	font-family:Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
 	font-size:35px;
+}
+#cardHeader{
+	font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", sans-serif;
+	font-size: 25px;
+	border-top-color: #00BDFE;
+	border-bottom-color: #00BDFE;
+	border-bottom-width: 5x;
+	border-top-width: 5px;
+}#BlackJackBody #blackJackArea {
 }
