--- a/Projects/Project V 6/stylesheets/stylesheet.css
+++ b/Projects/Project V 6/stylesheets/stylesheet.css
@@ -58,7 +58,6 @@ aside div{
 	color: #0099FF;
 	font-style: normal;
 	text-decoration: none;
-	background-image:url( http://chessonline.eu/wp-content/uploads/2011/12/chess.jpg );
 	background-size:100%;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -159,10 +158,10 @@ button{
 	box-shadow: inset 2px 84px 31px -86px #451415;
 }
 #ln{
-	display:none;
+	display:;
 }
 #ln1{
-	display:inline;
+	display:;
 }
 #registerSubmit{
 	-webkit-box-shadow: 73px 50px 30px 50px #010101;
