--- a/Projects/Project V 5/stylesheets/stylesheet.css
+++ b/Projects/Project V 5/stylesheets/stylesheet.css
@@ -44,24 +44,24 @@ aside div{
 	text-align:center;	
 }
 #games{
-	margin-top:10px;
-	margin-left:auto;
-	margin-right:auto;
+	margin-top: 10px;
+	margin-left: auto;
+	margin-right: auto;
 	text-align: center;
 	border: 2px solid #0099FF;
 	width: 450px;
 	height: 450px;
-
 	text-align: center;
 	border-radius: 20px;
 	font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", sans-serif;
 	color: #0099FF;
 	font-style: normal;
 	text-decoration: none;
-	background-size:100%;
+	background-size: 100%;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-color:black;
+	background-color: black;
+	background-image: url(http://www.casinocenter.com/wp-content/uploads/2011/03/blackjack2.jpg);
 	
 	
 }	
@@ -284,4 +284,7 @@ td{
 	font-family:"Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
 	box-shadow: -10px 3px 30px 1px #0024D0;
 	width:50%;
+}
+#functions {
+	display: none;
 }
